--- a/example/storybook/src/components/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Fab/index.stories.mdx
@@ -2,10 +2,120 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Fab" />
 
+import { AccessibleFab, HamburgerIcon } from './Fab';
+import { AppProvider, CodePreview } from '@gluestack/design-system';
+import { View } from 'react-native';
+import { Wrapper } from '../Wrapper';
+
 # Fab
 
-A Floating Action Button (FAB) component is used to create a button that appears to float above the interface, usually used to promote the most common action within an application. In React Native, the FAB component can be generated using a Universa11y library that uses "styled views" to define the layout, visual design, and behavior of the component.
+A `floating action button (FAB)` is a circular icon button that hovers over content to execute a primary action in the application.
 
-<Canvas style={{ height: 200 }}>
-  <Story id="components-stories-fab--fab-story" />
-</Canvas>
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+        return (<Wrapper>
+         <Fab
+        variant={'bottom-right'}
+        sx={{ top: 20, right: 20, alignSelf: 'center', h: 40 }}
+      >
+        <HamburgerIcon sx={{ w: 20, h: 20 }} color="white" />
+        <Fab.Label>Menu</Fab.Label>
+      </Fab>></Wrapper>)
+    }`,
+      scope: { Fab: AccessibleFab, Wrapper, HamburgerIcon },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+<br />
+
+## Installation
+
+```jsx
+yarn add @universa11y/fab
+```
+
+## Usage
+
+```jsx
+import { createFab } from '@universa11y/fab';
+const Fab = createFab({
+  Root,
+  Label,
+});
+```
+
+These are the styled components that we need to pass in the creator API:
+
+### Root
+
+```jsx
+const Root = styled(
+  Pressable,
+  {
+    ...
+  },
+);
+```
+
+### Label
+
+```jsx
+const Label = styled(
+  Text,
+  {
+    ...
+  },
+);
+```
+
+## Anatomy
+
+```jsx
+export default () => (
+  <Fab>
+    <Icon />
+    <Fab.Label></Fab.Label>
+  </Fab>
+);
+```
+
+## API Reference
+
+### Fab
+
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+### Fab.Label
+
+It also inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
+
+## Example
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+        return (<Wrapper>
+         <Fab
+        variant={'bottom-right'}
+        sx={{ top: 20, right: 20, alignSelf: 'center', h: 40 }}
+      >
+        <HamburgerIcon sx={{ w: 20, h: 20 }} color="white" />
+        <Fab.Label>Menu</Fab.Label>
+      </Fab>></Wrapper>)
+    }`,
+      scope: { Fab: AccessibleFab, Wrapper, HamburgerIcon },
+      argsType: {},
+    }}
+  />
+</AppProvider>
