--- a/example/storybook/src/components/HStack/index.stories.mdx
+++ b/example/storybook/src/components/HStack/index.stories.mdx
@@ -82,7 +82,7 @@ const Root = styled(
 );
 ```
 
-### Root
+### Spacer
 
 ```jsx
 const Spacer = styled(
@@ -107,7 +107,7 @@ export default () => (
 
 ## API Reference
 
-### Root
+### HStack
 
 Contains all View related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
