--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -344,12 +344,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
   </Table>
 </AppProvider>
 
-### GroupSpacer
-
-Contains all spacer related layout style props and actions.
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-
-### Spinner
+### Button.Spinner
 
 Contains all spinner related layout style props and actions.
 It inherits all the properties of React Native's [ActivityIndicator](https://reactnative.dev/docs/activityindicator#props) component.
