--- a/example/storybook/src/components/Icon/index.stories.mdx
+++ b/example/storybook/src/components/Icon/index.stories.mdx
@@ -2,10 +2,139 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Icon" />
 
+import { Wrapper } from '../Wrapper';
+import { AddIcon, HamburgerIcon, ArrowBackIcon, ArrowDownIcon } from './Icons';
+
+import {
+  AppProvider,
+  CodePreview,
+  Table,
+  Text,
+} from '@gluestack/design-system';
+
+import { View } from 'react-native';
+
 # Icon
 
-"Icon" component is used to create an icon in React Native. In React Native, the Icon component can be generated using a third-party accessibility-focused library that uses "styled views" and "svg" to define the layout, visual design, and behavior of the component.
+NativeBase allows you to use icons in multiples ways:
 
-<Canvas style={{ height: 200 }}>
-  <Story id="components-stories-icon--icon-story" />
-</Canvas>
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+        return (
+          <Wrapper>
+        <View style={{ flexDirection: 'row', flexWrap: 'wrap' }}>
+        <AddIcon sx={{ m: '$2' }} />
+        <HamburgerIcon sx={{ m: '$2' }} />
+        <ArrowBackIcon sx={{ m: '$2' }} />
+        <ArrowDownIcon sx={{ m: '$2' }} />
+      </View>
+          </Wrapper>
+    )
+    }`,
+      scope: {
+        Wrapper,
+        AddIcon,
+        HamburgerIcon,
+        ArrowBackIcon,
+        ArrowDownIcon,
+        View,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+<br />
+
+## Features
+
+- support of props on any svg icon
+
+## Installation
+
+```jsx
+yarn add @universa11y/icon
+```
+
+## Usage
+
+```jsx
+import { createIcon } from '@universa11y/icon';
+const Icon = createIcon({
+  Root,
+  viewBox,
+  d,
+});
+```
+
+These are the styled components that we need to pass in the creator API:
+
+### Root
+
+```jsx
+const Root = styled(
+  Svg,
+  {
+    ...
+  },
+);
+```
+
+## Anatomy
+
+```jsx
+export default () => <AddIcon />;
+```
+
+## API Reference
+
+### Icon
+
+It inherits all the properties of React Native SVG's [svg](https://github.com/software-mansion/react-native-svg/tree/main/Example) component.
+
+## Example
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+        return (
+          <Wrapper>
+        <View style={{ flexDirection: 'row', flexWrap: 'wrap' }}>
+        <AddIcon sx={{ m: '$2' }} />
+        <HamburgerIcon sx={{ m: '$2' }} />
+        <ArrowBackIcon sx={{ m: '$2' }} />
+        <ArrowDownIcon sx={{ m: '$2' }} />
+      </View>
+          </Wrapper>
+    )
+    }`,
+      scope: {
+        Wrapper,
+        AddIcon,
+        HamburgerIcon,
+        ArrowBackIcon,
+        ArrowDownIcon,
+        View,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+## Accessibility
+
+- Role: img is passed
+
+## Dependencies
+
+- `@universa11y/utils`
+- `react-native-svg`
