--- a/example/storybook/src/components/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Toast/index.stories.mdx
@@ -1,6 +1,22 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/Toast" /># Toast
+<Meta title="components/Toast" />
+
+import { AccessibleToast, useToast } from './Toast';
+import { Wrapper } from '../Wrapper';
+
+import { useState } from 'react';
+
+import {
+  AppProvider,
+  CodePreview,
+  Table,
+  Text,
+} from '@gluestack/design-system';
+
+import { Pressable, Text as RNText } from 'react-native';
+
+# Toast
 
 Toast displays alerts on top of an overlay. The Toast terminates itself when the close button is clicked or after a preset timeout. The component also allows users to give feedback when an action is completed.
 
@@ -17,14 +33,14 @@ Toast displays alerts on top of an overlay. The Toast terminates itself when the
     <Pressable
       onPress={() => {
         toast.show({
-          placement: 'bottom',
-          render: ({ id }: any) => {
+          placement: 'top',
+          render: ({ id }) => {
             return (
-              <ToastTemp>
-                <ToastTemp.Title>
-                  <Text>Hello World Toast {id}</Text>
-                </ToastTemp.Title>
-              </ToastTemp>
+              <Toast>
+                <Toast.Title>
+                  <RNText>Hello World Toast {id}</RNText>
+                </Toast.Title>
+              </Toast>
             );
           },
         });
@@ -40,7 +56,13 @@ Toast displays alerts on top of an overlay. The Toast terminates itself when the
           </Wrapper>
     )
     }`,
-      scope: { Toast: AccessibleToast, Wrapper, useToast, Pressable, RNText },
+      scope: {
+        Toast: AccessibleToast,
+        Wrapper,
+        useToast,
+        Pressable,
+        RNText,
+      },
       argsType: {},
     }}
   />
@@ -270,14 +292,14 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Pressable
       onPress={() => {
         toast.show({
-          placement: 'bottom',
-          render: ({ id }: any) => {
+          placement: 'top',
+          render: ({ id }) => {
             return (
-              <ToastTemp>
-                <ToastTemp.Title>
-                  <Text>Hello World Toast {id}</Text>
-                </ToastTemp.Title>
-              </ToastTemp>
+              <Toast>
+                <Toast.Title>
+                  <RNText>Hello World Toast {id}</RNText>
+                </Toast.Title>
+              </Toast>
             );
           },
         });
@@ -293,7 +315,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           </Wrapper>
     )
     }`,
-      scope: { Toast: AccessibleToast, Wrapper, useToast, Pressable, RNText },
+      scope: {
+        Toast: AccessibleToast,
+        Wrapper,
+        useToast,
+        Pressable,
+        RNText,
+      },
       argsType: {},
     }}
   />
